--- a/ui/grid/grid.css
+++ b/ui/grid/grid.css
@@ -16,6 +16,12 @@
 	flex: none;
 	overflow: hidden;
 }
+.st-grid > .table-head {
+	border-width: 5px 0;
+	border-style: solid;
+	border-color: #666;
+	background-color: #222;
+}
 .st-grid > .table-data {
 	flex: auto;
 	overflow: auto;
@@ -37,29 +43,39 @@
 
 .st-grid > .table-head > table > thead > tr > th,
 .st-grid > .table-data > table > tbody > tr > td {
-	/*border: 5px solid #666;*/
-	box-sizing: border-box;
+	border: 5px solid #666;
 	padding: .2em;
+	box-sizing: border-box;
 }
 .st-grid tbody {
 	/* 控制单元格内容的垂直对齐方式 */
 	vertical-align: top;
 }
+
 .st-grid tr {
-	/*position: fixed;*/
 	height: 30px;
-	background-color: #222;
 }
-/*
-.st-grid > table > thead > tr > th {
-	width: 50px;
+
+.st-grid > .table-head > table > thead > tr > th {
+	border-top-width: 0;
+	border-bottom-width: 0;
 }
-.st-grid > table > thead > tr > th:nth-child(2) {
-	width: 100px;
+
+.st-grid > .table-head > table > thead > tr > th:last-child {
+	border-right-color: transparent;
 }
-.st-grid > table > thead > tr > th:nth-child(3) {
-	width: auto;
+
+.st-grid > .table-data > table > tbody > tr:first-child > td {
+	border-top-width: 0;
 }
-.st-grid > table > thead > tr > th:last-child {
-	width: 150px;
-}*/
+
+.st-grid.no-hl > .table-head,
+.st-grid.no-hl > .table-data > table > tbody > tr > td {
+	border-top-width: 0;
+	border-bottom-width: 0;
+}
+
+.st-grid.no-vl > .table-data > table > tbody > tr > td {
+	border-top-width: 0;
+	border-bottom-width: 0;
+}
