--- a/ui/grid/design.css
+++ b/ui/grid/design.css
@@ -4,7 +4,13 @@ body {
 	font-size: 16px;
 }
 
-#c1 {
+#simple{
+	width: 500px;
+	height: auto;
+	border: 5px solid #aaa;
+
+}
+#fixed-head{
 	width: 500px;
 	height: 200px;
 	border: 5px solid #aaa;
